<resources>
    <string name="app_name">QuickResq</string>


    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_title">QuickResq</string>
    <string name="email_address">Entetr Email</string>
    <string name="register">Register</string>
    <string name="register1">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="default_text">Default Text</string>
    <string name="sign_in">SIGN IN</string>


    <string name="onlineserverdomain">https://onlineshp.scopesoftwarecompany.com/QuickResq/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>