<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">


    <EditText
        android:id="@+id/baddress"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:background="@drawable/custome_edittext"
        android:color="@color/black"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="phone number"
        android:textColor="@color/black"
        android:inputType="phone"
        android:paddingStart="20sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toTopOf="@+id/med_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/med_name" />

    <EditText
        android:id="@+id/med_name"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:background="@drawable/custome_edittext"
        android:color="@color/black"
        android:drawableStart="@drawable/username_icon"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:paddingStart="20sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"


        app:layout_constraintBottom_toTopOf="@+id/baddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_email" />

    <EditText
        android:id="@+id/r_Cpassword"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:background="@drawable/custome_edittext"
        android:color="@color/black"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:textColor="@color/black"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"


        app:layout_constraintBottom_toTopOf="@+id/add_cart_med"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/med_price" />

    <EditText
        android:id="@+id/med_price"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:background="@drawable/custome_edittext"
        android:color="@color/black"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/r_Cpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register1"
        android:textColor="#DC101010"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/font1"
        app:layout_constraintBottom_toTopOf="@+id/r_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/r_email"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:background="@drawable/custome_edittext"
        android:color="@color/black"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="20sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/med_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <!-- android:textColorHint=#090909  -->

    <Button

        android:id="@+id/add_cart_med"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:text="@string/register"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/registered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_Cpassword" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/font1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/font1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_cart_med" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/font1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="548dp"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>